# agentdiag

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agentdiag/: __init__.py  cli.py  metrics.py  report.py  schema.py  tracer.py
src/agentdiag/adapters/: __init__.py  base.py  langchain.py  openai_sdk.py  raw.py
src/agentdiag/detectors/: __init__.py  base.py  hallucination.py  loop.py  premature_stop.py  recovery.py  tool_misuse.py
src/agentdiag/instrument/: __init__.py  anthropic.py  openai.py
tests/: test_adapters.py  test_cli.py  test_detectors.py  test_instrument_openai.py  test_schema.py  test_tracer.py
tests/fixtures/: clean_trace.json  langchain_trace.json  loop_trace.json  openai_sdk_trace.json  recovery_failure_trace.json  tool_misuse_trace.json
