[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdiag"
version = "0.1.0"
description = "Diagnose why AI agents fail. Lightweight CLI for agent trace analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Julian Tang" },
]
keywords = ["ai", "agents", "llm", "debugging", "diagnostics", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
agentdiag = "agentdiag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdiag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
